# chaz-track-parser

./: .gitignore  README.md  config.yaml  environment.yaml  environment.yml  pyproject.toml
config/: config.yaml
config/slurm-cluster/: config.yaml
jobs/: run_all.sh
src/chaz/: constants.py  models.py  parse.py  plot.py
workflow/: 1_context.smk  2_parse.smk  3_target.smk  Snakefile  config.yaml  parse.smk
