[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chaz"
dynamic = ["version"]
description = "for parsing CHAZ tropical cyclone tracks"
readme = "README.md"
license = "MIT"
authors = [{ name = "Fred Thomas", email = "fred.thomas@eci.ox.ac.uk" }]
keywords = []
classifiers = [
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = ["pandas", "numpy", "xarray"]

[project.optional-dependencies]
dev = [
    "black",
    "nbstripout",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 120